# aQuteCardGame

./: .gitignore  AndroidManifest.xml  CMakeLists.txt  README.md  blind.cpp  blind.h  card.cpp  card.h  cardvec.cpp  cardvec.h  choosers.cpp  choosers.h  choosers_old.cpp  choosers_old.h  deck.h  drawn.cpp  drawn.h  gTestTheQuteCardGame.cpp  game.cpp  game.h  game_BACKUP_74834.cpp  got.cpp  got.h  handdeck.cpp  handdeck.h  images.qrc  main.cpp  monitor.cpp  monitor.h  playable.cpp  playable.h  played.cpp  played.h  player.cpp  player.h  qTestTheQuteCardGame.cpp  qTestTheQuteCardGame.h  resources.qrc  sounds.qrc  stack.cpp  (+7 more)
android/: AndroidManifest.xml
android/res/drawable-anydpi-v21/: ic_launcher.xml  ic_launcher_adaptive_back.xml  ic_launcher_adaptive_fore.xml
android/res/xml/: qtprovider_paths.xml
cards_small/: xcfToPng.sh
res/: aQuteCardGame.xcf  make_logo.sh
res/cards_small/: 10_of_clubs.xcf  10_of_diamonds.xcf  10_of_hearts.xcf  10_of_spades.xcf  6_of_clubs.xcf  6_of_diamonds.xcf  6_of_hearts.xcf  6_of_spades.xcf  7_of_clubs.xcf  7_of_diamonds.xcf  7_of_hearts.xcf  7_of_spades.xcf  8_of_clubs.xcf  8_of_diamonds.xcf  8_of_hearts.xcf  8_of_spades.xcf  9_of_clubs.xcf  9_of_diamonds.xcf  9_of_hearts.xcf  9_of_spades.xcf  ace_of_clubs.xcf  ace_of_diamonds.xcf  ace_of_hearts.xcf  ace_of_spades.xcf  backside_blue.xcf  backside_blue_inactive.xcf  backside_red.xcf  jack_of_clubs.xcf  jack_of_diamonds.xcf  jack_of_hearts.xcf  jack_of_spades.xcf  king_of_clubs.xcf  king_of_diamonds.xcf  king_of_hearts.xcf  king_of_spades.xcf  queen_of_clubs.xcf  queen_of_diamonds.xcf  queen_of_hearts.xcf  queen_of_spades.xcf
res/choosers/: chooser_eights_a.xcf  chooser_eights_n.xcf  chooser_jpoints_m.xcf  chooser_jpoints_p.xcf  chooser_new_f.xcf  chooser_new_g.xcf  chooser_new_r.xcf  chooser_quit_g.xcf  chooser_qute_n.xcf  chooser_qute_y.xcf
res/choosers_small/: chooser_eights_a.xcf  chooser_eights_n.xcf  chooser_jpoints_m.xcf  chooser_jpoints_p.xcf  chooser_new_f.xcf  chooser_new_g.xcf  chooser_new_r.xcf  chooser_qute_n.xcf  chooser_qute_y.xcf  jsuit_of_clubs.xcf  jsuit_of_diamonds.xcf  jsuit_of_hearts.xcf  jsuit_of_spades.xcf
res/layout/: screenshot_android.xcf
res/styles/: aQuteCardgame.css  main.css
src/: blind.cpp  blind.h  card.cpp  card.h  cardvec.cpp  choosers.h  deck.cpp  drawn.cpp  got.cpp  handdeck.cpp  handdeck.h  main.cpp  playable.cpp  playable.h  player.h  table.h
tests/: gTestTheQuteCardGame.cpp  tst_card.cpp
